--- a/ColoShopEcommerce.WebApp/ColoShopEcommerce.WebApp.csproj
+++ b/ColoShopEcommerce.WebApp/ColoShopEcommerce.WebApp.csproj
@@ -186,6 +186,10 @@
     <Compile Include="Migrations\202207171240417_UpdateDB.designer.cs">
       <DependentUpon>202207171240417_UpdateDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202207190841553_updateActive.cs" />
+    <Compile Include="Migrations\202207190841553_updateActive.designer.cs">
+      <DependentUpon>202207190841553_updateActive.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CommonAbstract.cs" />
@@ -1344,6 +1348,7 @@
     <Content Include="Areas\Admin\Views\Category\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\News\Index.cshtml" />
     <Content Include="Areas\Admin\Views\News\Add.cshtml" />
+    <Content Include="Areas\Admin\Views\News\Edit.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -1414,6 +1419,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202207171240417_UpdateDB.resx">
       <DependentUpon>202207171240417_UpdateDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202207190841553_updateActive.resx">
+      <DependentUpon>202207190841553_updateActive.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
