--- a/ColoShopEcommerce.WebApp/ColoShopEcommerce.WebApp.csproj
+++ b/ColoShopEcommerce.WebApp/ColoShopEcommerce.WebApp.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
     <Compile Include="Areas\Admin\Controllers\NewsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProductCategoriesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ProductsController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -199,6 +200,14 @@
     <Compile Include="Migrations\202207200900139_UpdatePC.designer.cs">
       <DependentUpon>202207200900139_UpdatePC.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202207202343566_updateFILE.cs" />
+    <Compile Include="Migrations\202207202343566_updateFILE.designer.cs">
+      <DependentUpon>202207202343566_updateFILE.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202207210101170_updateProduct.cs" />
+    <Compile Include="Migrations\202207210101170_updateProduct.designer.cs">
+      <DependentUpon>202207210101170_updateProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CommonAbstract.cs" />
@@ -212,7 +221,7 @@
     <Compile Include="Models\EF\Post.cs" />
     <Compile Include="Models\EF\Product.cs" />
     <Compile Include="Models\EF\ProductCategory.cs" />
-    <Compile Include="Models\EF\ProductImage.cs" />
+    <Compile Include="Models\EF\FILE.cs" />
     <Compile Include="Models\EF\Subscribe.cs" />
     <Compile Include="Models\EF\SystemSetting.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -288,6 +297,7 @@
     <Content Include="Content\Admin\js\calendar.js" />
     <Content Include="Content\Admin\js\chart.js" />
     <Content Include="Content\Admin\js\chartist.js" />
+    <Content Include="Content\Admin\js\CheckValidate.js" />
     <Content Include="Content\Admin\js\clipboard.js" />
     <Content Include="Content\Admin\js\codeEditor.js" />
     <Content Include="Content\Admin\js\context-menu.js" />
@@ -1361,6 +1371,9 @@
     <Content Include="Areas\Admin\Views\ProductCategories\Index.cshtml" />
     <Content Include="Areas\Admin\Views\ProductCategories\Add.cshtml" />
     <Content Include="Areas\Admin\Views\ProductCategories\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Products\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Products\Add.cshtml" />
+    <Content Include="Areas\Admin\Views\Products\Edit.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -1440,6 +1453,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202207200900139_UpdatePC.resx">
       <DependentUpon>202207200900139_UpdatePC.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202207202343566_updateFILE.resx">
+      <DependentUpon>202207202343566_updateFILE.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202207210101170_updateProduct.resx">
+      <DependentUpon>202207210101170_updateProduct.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
