--- a/ColoShopEcommerce.WebApp/ColoShopEcommerce.WebApp.csproj
+++ b/ColoShopEcommerce.WebApp/ColoShopEcommerce.WebApp.csproj
@@ -212,6 +212,10 @@
     <Compile Include="Migrations\202207210101170_updateProduct.designer.cs">
       <DependentUpon>202207210101170_updateProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202207300316394_updateOrder.cs" />
+    <Compile Include="Migrations\202207300316394_updateOrder.designer.cs">
+      <DependentUpon>202207300316394_updateOrder.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Cart.cs" />
@@ -1438,6 +1442,7 @@
     <Content Include="Views\Product\ProductDetail.cshtml" />
     <Content Include="Views\ShoppingCart\Index.cshtml" />
     <Content Include="Views\CheckOut\Index.cshtml" />
+    <Content Include="Views\CheckOut\Checkout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -1478,6 +1483,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202207210101170_updateProduct.resx">
       <DependentUpon>202207210101170_updateProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202207300316394_updateOrder.resx">
+      <DependentUpon>202207300316394_updateOrder.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
