--- a/ColoShopEcommerce.WebApp/Web.config
+++ b/ColoShopEcommerce.WebApp/Web.config
@@ -17,6 +17,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <!--Setting Email-->
+	  <add key="PasswordEmail" value="xbiclrxxfhyimzqc"/>
+	  <add key="Email" value="calvinp2381999@gmail.com"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
