--- a/ColoShopEcommerce.WebApp/ColoShopEcommerce.WebApp.csproj
+++ b/ColoShopEcommerce.WebApp/ColoShopEcommerce.WebApp.csproj
@@ -183,7 +183,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
-    <Compile Include="Areas\Admin\Controllers\AccountAdminController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AccountManagementController.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\RoleController.cs" />
@@ -266,6 +266,8 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ReportModel\ReportParams.cs" />
+    <Compile Include="Models\ViewModel\ManageUserRolesVM.cs" />
+    <Compile Include="Models\ViewModel\UserRolesViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reports\Datasets\dsOrderReport.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -1448,6 +1450,8 @@
     <Content Include="Reports\Datasets\dsOrderReport.xsc">
       <DependentUpon>dsOrderReport.xsd</DependentUpon>
     </Content>
+    <Content Include="Areas\Admin\Views\AccountManagement\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\AccountManagement\Manage.cshtml" />
     <None Include="Reports\Datasets\dsOrderReport.xsd">
       <SubType>Designer</SubType>
       <Generator>MSDataSetGenerator</Generator>
